zerolog package added

--- a/local.config.json
+++ b/local.config.json
@@ -23,6 +23,7 @@
         "db": 0
     },
     "log": {
-        "dir": "internal/storage/logs"
+        "dir": "internal/storage/logs",
+        "level": 0
     }
 }
