--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -87,7 +87,7 @@ repos:
           # Style Checkers
           #
           - id: go-lint
-          - id: go-critic
+          # - id: go-critic
           #
           # GolangCI-Lint
           # - Fast Multi-Linter
