--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,26 +1,32 @@
 {
+    "editor.tabSize": 4,
+    "editor.wordWrap": "on",
+
     "go.formatTool": "goimports",
-    "go.formatFlags": [
-        "-s",
-        "-w",
-        "-e"
-    ],
+    "go.formatFlags": ["-s", "-w", "-e"],
     "go.useLanguageServer": true,
     "[go]": {
         "editor.defaultFormatter": "golang.go",
         "editor.formatOnSave": true,
         "editor.codeActionsOnSave": {
-            "source.organizeImports": true,
+            "source.organizeImports": true
         }
     },
     "go.docsTool": "gogetdoc",
     "go.autocompleteUnimportedPackages": true,
     "go.lintTool": "golangci-lint",
     "go.lintOnSave": "file",
-    "go.lintFlags": [
-        "--fast"
-    ],
+    "go.lintFlags": ["--fast"],
     "go.buildOnSave": "workspace",
     "go.toolsManagement.autoUpdate": true,
     "go.installDependenciesWhenBuilding": true,
+    "[json]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+
+    "[yaml]": {
+        "editor.insertSpaces": true,
+        "editor.tabSize": 4,
+        "editor.defaultFormatter": "redhat.vscode-yaml"
+    }
 }
