added connection timeout for sql, main error log will be colored, config custome time change to avoid time duration parsing

--- a/config/local.config.json
+++ b/config/local.config.json
@@ -21,22 +21,25 @@
         "password": "profsnapeisdon",
         "user": "root"
     },
-    "mysql": [
-        {
-            "db": "cscart_new",
-            "host": "dev1.droom.in",
-            "password": "profsnapeisdon",
-            "port": 3306,
-            "user": "root"
-        },
-        {
-            "db": "cscart_new",
-            "host": "dev1.droom.in",
-            "password": "profsnapeisdon",
-            "port": 3306,
-            "user": "root"
-        }
-    ],
+    "mysql": {
+        "servers": [
+            {
+                "db": "cscart_new",
+                "host": "dev1.droom.in",
+                "password": "profsnapeisdon",
+                "port": 3306,
+                "user": "root"
+            },
+            {
+                "db": "cscart_new",
+                "host": "dev1.droom.in",
+                "password": "profsnapeisdon",
+                "port": 3306,
+                "user": "root"
+            }
+        ],
+        "connectionTimeout": "1s"
+    },
     "rabbitmq": {
         "enabled": true,
         "host": "dev1.droom.in",
