DRM-COUPON | rabbitmq with reconnection

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,5 +31,9 @@
 
     "[json]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "editor.tokenColorCustomizations": {
+        "comments": "",
+        "textMateRules": []
     }
 }
