--- a/config/local.config.json
+++ b/config/local.config.json
@@ -47,6 +47,7 @@
         "port": 5672,
         "timeout": "60s",
         "user": "admin",
-        "vhost": "/"
+        "vhost": "/",
+        "heartbeat": "60s"
     }
 }
